--- a/.github/workflows/cluster_create.yml
+++ b/.github/workflows/cluster_create.yml
@@ -15,11 +15,18 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Get changed files
       id: changed-files
       run: |
-        echo "CHANGED_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})" >> $GITHUB_ENV
+        if [ "${{ github.event_name }}" = "push" ]; then
+          CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD)
+        else
+          CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }})
+        fi
+        echo "CHANGED_FILES=$CHANGED_FILES" >> $GITHUB_ENV
 
     - name: Check if cluster.py was changed
       id: check-cluster
