--- a/.github/workflows/cluster_create.yml
+++ b/.github/workflows/cluster_create.yml
@@ -26,7 +26,9 @@ jobs:
         else
           CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }})
         fi
-        echo "CHANGED_FILES=$CHANGED_FILES" >> $GITHUB_ENV
+        echo "CHANGED_FILES<<EOF" >> $GITHUB_ENV
+        echo "$CHANGED_FILES" >> $GITHUB_ENV
+        echo "EOF" >> $GITHUB_ENV
 
     - name: Check if cluster.py was changed
       id: check-cluster
