--- a/values/argocd-values.yaml
+++ b/values/argocd-values.yaml
@@ -5,7 +5,7 @@ configs:
     server.insecure: true
   secret:
     ## `htpasswd -nbBC 10 "" $ARGO_PWD | tr -d ':\n' | sed 's/$2y/$2a/'`
-    argocdServerAdminPassword: "$2a$10$X8X.dqAalNX6VwyALz1atOGZQeNn6azbx/yikMusQHYe7Spo9uBbq"
+    argocdServerAdminPassword: "$2a$10$s430WkKROqbdPDAusMQXrOUsUmRQJkOXpkSBm72eYj6E8nkLIZCCC"
 server:
   ingress:
     enabled: true
