--- a/.github/workflows/cluster_create.yml
+++ b/.github/workflows/cluster_create.yml
@@ -10,8 +10,8 @@ on:
 jobs:
   run-cluster-script:
     # if: github.event.pull_request.merged == true
-    #runs-on: self-hosted
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+    #runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -21,7 +21,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.9'
+        python-version: '3.12.3'
 
     #- name: Install dependencies
     #  run: |
