--- a/.github/workflows/cluster_create.yml
+++ b/.github/workflows/cluster_create.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.12.3'
+        python-version: '3.12'
 
     #- name: Install dependencies
     #  run: |
@@ -64,8 +64,8 @@ jobs:
         DB_PASS: ${{ secrets.DB_PASS }}
         S3_KEY: ${{ secrets.S3_KEY }}
         S3_SECRET: ${{ secrets.S3_SECRET }}
-        TLS_KEY: ${{ secrets.S3_TLS_KEY }}
-        TLS_CRT: ${{ secrets.S3_TLS_CRT }}
+        TLS_KEY: ${{ secrets.TLS_KEY }}
+        TLS_CRT: ${{ secrets.TLS_CRT }}
       run: |
         /usr/local/bin/kubectl create ns ingress-nginx --dry-run=client -o yaml | /usr/local/bin/kubectl apply -f -
         /usr/local/bin/kubectl create ns monitoring --dry-run=client -o yaml | /usr/local/bin/kubectl apply -f -
