--- a/.github/workflows/cluster_create.yml
+++ b/.github/workflows/cluster_create.yml
@@ -81,4 +81,5 @@ jobs:
         sed -i "s/\!\!\!S3\_KEY\!\!\!/$(echo $S3_KEY | base64)/g" secrets.yaml
         sed -i "s/\!\!\!DB\_PASS\!\!\!/$(echo $DB_PASS | base64)/g" secrets.yaml
         /usr/local/bin/kubectl apply -f secrets.yaml
+        rm secrets.yaml
         python3 scripts/argocd.py
