fix kube-dns loki

--- a/values/loki-values.yaml
+++ b/values/loki-values.yaml
@@ -6,7 +6,7 @@ minioLokiBucket: &minioLokiBucket otus-project-loki
 
 
 global:
-  dnsService: "coredns"
+  dnsService: "kube-dns"
 loki:
   commonConfig:
     replication_factor: 1
