--- a/values/loki-values.yaml
+++ b/values/loki-values.yaml
@@ -4,7 +4,7 @@ minioUrlNoHttps: &minioUrlNoHttps storage.yandexcloud.net
 minioRegion: &minioRegion ru-central1
 minioLokiBucket: &minioLokiBucket otus-project-loki
 
-
+deploymentMode: SingleBinary
 global:
   dnsService: "kube-dns"
 loki:
