add nextcloud and nc-secret

--- a/secrets.yaml
+++ b/secrets.yaml
@@ -20,5 +20,20 @@ kind: Secret
 metadata:
   name: pxc-db-secrets
   namespace: app
+---
+apiVersion: v1
+data:
+  nc-user: admin
+  nc-pass: !!!DB_PASS!!!
+  db-user: root
+  db-pass: !!!DB_PASS!!!
+  s3key: !!!S3_KEY!!!
+  s3secret: !!!S3_SECRET!!!
+  s3host: "https://storage.yandexcloud.net"
+  s3bucket: otus-project-data
+kind: Secret
+metadata:
+  name: nc-secret
+  namespace: app
 
 
