--- a/secrets.yaml
+++ b/secrets.yaml
@@ -23,14 +23,14 @@ metadata:
 ---
 apiVersion: v1
 data:
-  nc-user: admin
+  nc-user: YWRtaW4=
   nc-pass: !!!DB_PASS!!!
-  db-user: root
+  db-user: cm9vdA==
   db-pass: !!!DB_PASS!!!
   s3key: !!!S3_KEY!!!
   s3secret: !!!S3_SECRET!!!
-  s3host: "https://storage.yandexcloud.net"
-  s3bucket: otus-project-data
+  s3host: Imh0dHBzOi8vc3RvcmFnZS55YW5kZXhjbG91ZC5uZXQi
+  s3bucket: b3R1cy1wcm9qZWN0LWRhdGE=
 kind: Secret
 metadata:
   name: nc-secret
