--- a/values/nc-values.yaml
+++ b/values/nc-values.yaml
@@ -50,6 +50,14 @@ nextcloud:
           array('memcached', 11211),
         ),
       );
+    logging.config.php: |-
+      <?php
+      $CONFIG = array (
+        'log_type' => 'file',
+        'logfile' => 'nextcloud.log',
+        'loglevel' => 2,
+        'logdateformat' => 'F d, Y H:i:s'
+        );
 
 internalDatabase:
   enabled: false
