fix collabora office in NC try 2

--- a/values/nc-values.yaml
+++ b/values/nc-values.yaml
@@ -91,7 +91,7 @@ collabora:
     # you may need to add --o:ssl.termination=true
     extra_params: --o:ssl.enable=false
 
-    server_name: project.retail-consult.by
+    server_name: https://office-project.retail-consult.by
 
     existingSecret:
       enabled: true
