onlyoffice enable unauthorized

--- a/argo-apps/manifests/onlyoffice.yaml
+++ b/argo-apps/manifests/onlyoffice.yaml
@@ -17,6 +17,8 @@ spec:
       - name: onlyoffice
         image: ghcr.io/thomisus/onlyoffice-documentserver-unlimited:8.1.3
         env:
+        - name: USE_UNAUTHORIZED_STORAGE
+          value: "true"
         - name: ALLOW_PRIVATE_IP_ADDRESS
           value: "TRUE"
         - name: ALLOW_META_IP_ADDRES
