--- a/secrets.yaml
+++ b/secrets.yaml
@@ -7,6 +7,7 @@ type: Opaque
 data:
   s3-key: !!!S3_KEY!!!
   s3-secret: !!!S3_SECRET!!!
+  s3-bucket: !!!S3_BUCKET_LOKI!!!
 ---
 apiVersion: v1
 data:
@@ -30,7 +31,7 @@ data:
   s3key: !!!S3_KEY!!!
   s3secret: !!!S3_SECRET!!!
   s3host: c3RvcmFnZS55YW5kZXhjbG91ZC5uZXQ=
-  s3bucket: b3R1cy1wcm9qZWN0LWRhdGE=
+  s3bucket: !!!S3_BUCKET_NC!!!
 kind: Secret
 metadata:
   name: nc-secret
