fix CPU (was too low for dbs) and loki space. Final test on clean YC

--- a/values/loki-values.yaml
+++ b/values/loki-values.yaml
@@ -63,6 +63,11 @@ singleBinary:
         secretKeyRef:
           name: loki-s3
           key: s3-bucket
+  persistence:
+    enabled: true
+    size: 1Gi
+    storageClass: *storageClass
+
 chunksCache:
   enabled: false
 minio:
