fix for redirect after login to NC

--- a/values/nc-values.yaml
+++ b/values/nc-values.yaml
@@ -75,6 +75,7 @@ nextcloud:
     logging.config.php: |-
       <?php
       $CONFIG = array (
+        'overwriteprotocol' => 'https',
         'log_type' => 'file',
         'logfile' => 'nextcloud.log',
         'loglevel' => 2,
